# accompanist-lyrics-ui

./: .gitignore  build.gradle.kts  settings.gradle.kts
gradle/: libs.versions.toml
sample/: build.gradle.kts
sample/src/androidMain/kotlin/com/mocharealm/accompanist/sample/data/repository/: MusicRepositoryImpl.kt
sample/src/androidMain/kotlin/com/mocharealm/accompanist/sample/domain/model/: MusicItem.kt
sample/src/commonMain/kotlin/com/mocharealm/accompanist/sample/ui/composable/: ModalScaffold.kt
sample/src/commonMain/resources/drawable/: ic_accompanist.xml  ic_ellipsis.xml
src/: build.gradle.kts  compose_compiler_config.conf  consumer-rules.pro
src/src/androidMain/kotlin/com/mocharealm/accompanist/lyrics/text/: NativeTextEngine.android.kt  SdfAtlasManager.android.kt
src/src/androidMain/kotlin/com/mocharealm/accompanist/lyrics/ui/utils/: String.android.kt
src/src/appleMain/kotlin/com/mocharealm/accompanist/lyrics/text/: NativeTextEngine.apple.kt  SdfAtlasManager.apple.kt
src/src/appleMain/kotlin/com/mocharealm/accompanist/lyrics/ui/utils/: String.apple.kt  String.jvm.kt
src/src/commonMain/kotlin/com/mocharealm/accompanist/lyrics/text/: NativeTextEngine.kt  SdfAtlasManager.kt  SdfShader.kt
src/src/commonMain/kotlin/com/mocharealm/accompanist/lyrics/ui/utils/: String.kt
src/src/jvmMain/kotlin/com/mocharealm/accompanist/lyrics/text/: NativeTextEngine.jvm.kt  SdfAtlasManager.jvm.kt
text_engine/: Cargo.toml  cbindgen.toml
text_engine/src/: atlas.rs  core.rs  font.rs  jvm.rs  lib.rs  native.rs
(+18 files in other folders)
