[package]
name = "text_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "text_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
jni = "0.19"
rustybuzz = "0.18.0"
euclid = "0.22.11"
swash = { version = "0.1.19", features = ["scale"] }
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbindgen = "0.29.2"
sdf_glyph_renderer = "1.0.2"
memmap2 = "0.9"
libc = "0.2"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
android_log = "0.1"
